--- a/src/CheeseMVC/Views/Category/Add.cshtml
+++ b/src/CheeseMVC/Views/Category/Add.cshtml
@@ -10,5 +10,5 @@
         <span asp-validation-for="Name"></span>
     </div>
 
-    <input type="submit" name="Add Category" />
+    <input type="submit" value="Add Category" />
 </form>
