--- a/src/CheeseMVC/Views/Shared/_Layout.cshtml
+++ b/src/CheeseMVC/Views/Shared/_Layout.cshtml
@@ -1,4 +1,5 @@
-﻿<!DOCTYPE html>
+﻿
+<!DOCTYPE html>
 <html>
 <head>
     <meta charset="utf-8" />
@@ -33,6 +34,7 @@
                     <li><a asp-controller="Cheese" asp-action="Index">Home</a></li>
                     <li><a asp-controller="Cheese" asp-action="Add">Add</a></li>
                     <li><a asp-controller="Category" asp-action="Index">Categories</a></li>
+                    <li><a asp-controller="Menu" asp-action="Index">Menus</a></li>
                 </ul>
             </div>
         </div>
