--- a/src/CheeseMVC/Views/Cheese/Index.cshtml
+++ b/src/CheeseMVC/Views/Cheese/Index.cshtml
@@ -1,6 +1,11 @@
-﻿@model List<CheeseMVC.Models.Cheese>
+@model List<CheeseMVC.Models.Cheese>
 
 <h1>@ViewBag.Title</h1>
+
+@if (Model.Count == 0)
+{
+    <p>No cheeses yet!</p>
+}
 
 <table class="table">
 
@@ -19,10 +24,5 @@
         </tr>
     }
 </table>
-
-@if (Model.Count == 0)
-{
-    <p>No cheeses yet!</p>
-}
 
 <p><a asp-controller="Cheese" asp-action="Add">Add Cheese</a></p>
